[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["afonsolelis <afonsolelis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
